2017-03-06  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/units/tools.py(UncertaintyAwareDataArray.to):

	Bugfix, adapt signature for contexts to the one used by pint, such
	that it works when the number of contexts given is not exactly one.

2017-03-06  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py:

	Added `make_binary` and `make_directory_binary` to `__all__`.

	* (save): Added the new keyword `parents`.

	If `parents` is `True` missing parent directories are created.

	* (load_directory): Include zipped XML files to pattern.

	* (make_binary, make_directory_binary):

	Use the newly implemented `parents` keyword of `save` to create missing
	parent directories when needed.

	Both functions return the path(s) to the created file(s) to determine where
	the binary files are located.

	* doc/typhon.arts.rst: Added `make_binary` and `make_directory_binary`.

	* typhon/constants.py, typhon/physics/units/constants.py:

	Fixed typo in docstrings.

	* KNOWN_ISSUES: Removed solved issues.

2017-03-03  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/metrology.py(express_uncertainty):

	- Tell user in machine form what args have failed to be
	differentiated.

	* typhon/physics/units/common.py:

	- Added some clarifying (hopefully) comments

	* typhon/physics/units/tools.py:

	(UnitsAwareDataArray):

	- Support ufuncs that return floats rather than quantities.  Store
	as string so that it can be valid NetCDF.

	- Add support for __radd__, __rsub__, __rtruediv__, etc.

2017-03-03  Richard Larsson  <ric.larsson@gmail.com>

	* typhon/arts/catalogues.py:  Added helpers for SpeciesAuxData.
	These make use of property and setter keywords.  Makes version
	1 SpecisAuxData particularly much more user friendly but version
	2 SpecisAuxData is still a bit of a hassle.  (Isotopologue ratios
	are kept in version 1 data so it is now much easier to rescale
	your jacobian to give proper mixing ratios for different 