@@ -1,3 +1,7 @@
+2017-03-06  Lukas Kluft  <lukas.kluft@gmail.com>
+
+	* typhon/arts/xml/__init__.py: Simplified code around if-conditions.
+
 2017-03-06  Gerrit Holl  <g.holl@reading.ac.uk>
 
 	* typhon/physics/units/tools.py(UncertaintyAwareDataArray.to):
